# LLM_projects

./: .gitignore  python_c_rust.ipynb  requirements.txt  synthetic_data_generator.ipynb
agentic_clone/: .gitignore  README.md  app.py  clone.ipynb  requirements.txt
agentic_clone/me/: summary.txt
camp_manager/: .gitignore  README.md  README2.md  agent.py  eval.py  eval_app.py  evals.json  mock_db.backup.json  pyproject.toml  tool_schemas.py
camp_manager/notebook/: agent_exp.ipynb  agent_sdk.ipynb
conv_classifiation/: .gitignore  casino_signal_dataset_realistic_300.jsonl  conv.ipynb  dataset.jsonl  llm_judge.ipynb  readme.md  signal_extraction_benchmark.ipynb  signal_extraction_benchmark.py
llm_code_benchmark/: README.md  main.cpp  python_c_rust.ipynb  system_info.py
signal_identification/: .gitignore  app.py  dataset_vip.jsonl  readme.md  requirements.txt  signal_extraction_benchmark.ipynb
synthetic_data_generation/: README.md  synthetic_data_generator.ipynb
